# 001_first_repo

./: .env.example  .gitignore  render.yaml  requirements.txt
AI_VIDEO_BUSINESS/clinic-content-engine/: README.md  STRATEGY.md  pyproject.toml
AI_VIDEO_BUSINESS/clinic-content-engine/clients/aesthetics/: client.yaml  guardrails.yaml
AI_VIDEO_BUSINESS/clinic-content-engine/clients/aesthetics/deliverables/2026-03/: audit_log.json  posts.csv  reels_scripts.txt
AI_VIDEO_BUSINESS/clinic-content-engine/clients/aesthetics/kb/: kb_chunks.jsonl
AI_VIDEO_BUSINESS/clinic-content-engine/clients/aesthetics/runs/2026-03/: drafts.jsonl  plan.json  reviewed.jsonl
AI_VIDEO_BUSINESS/clinic-content-engine/clients/aesthetics/sources/: example.txt
AI_VIDEO_BUSINESS/clinic-content-engine/clients/ammc/: client.yaml  guardrails.yaml
AI_VIDEO_BUSINESS/clinic-content-engine/clients/ammc/deliverables/2026-03/: audit_log.json  reels_scripts.txt
AI_VIDEO_BUSINESS/clinic-content-engine/clients/ammc/deliverables/2026-04/: audit_log.json  posts.csv  reels_scripts.txt
AI_VIDEO_BUSINESS/clinic-content-engine/clients/ammc/deliverables/2026-05/: audit_log.json  posts.csv  reels_scripts.txt
AI_VIDEO_BUSINESS/clinic-content-engine/clients/ammc/kb/: kb_chunks.jsonl
AI_VIDEO_BUSINESS/clinic-content-engine/clients/ammc/sources/: example.txt
AI_VIDEO_BUSINESS/clinic-content-engine/src/cce/: __init__.py  cli.py  export.py  generate.py  guardrails.py  ingest.py  llm.py  models.py  plan.py  review.py  utils.py
AI_VIDEO_BUSINESS/clinic-content-engine/tests/: test_guardrails.py
(+270 files in other folders)
